# TrajAtlas

./: .gitignore  README.md  pyproject.toml
.git.bfg-report/2024-03-19/17-19-30/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.git.bfg-report/2024-03-19/17-19-30/protected-dirt/: 70bb558c-HEAD.csv
.git.bfg-report/2024-03-19/17-20-22/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.git.bfg-report/2024-03-19/17-20-57/protected-dirt/: 30b4b7e1-HEAD.csv
.git.bfg-report/2024-03-19/17-28-49/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.git.bfg-report/2024-03-19/17-28-58/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
TrajAtlas/: __init__.py
TrajAtlas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TrajAtlas/TRAVMap/: __init__.py  genemodule.py  gm_4.py  gm_7.py
TrajAtlas/TrajAtlas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TrajAtlas/TrajDiff/: __init__.py  _env.py  trajDiff.py  trajDiff_1.py  trajDiff_2.py  trajDiff_35.py  trajDiff_4.py  trajDiff_6.py  trajDiff_7.py  trajdiff_utils.py  trajdiff_utils_12.py  trajdiff_utils_9.py
TrajAtlas/datasets/: NMF_varGene.csv  rf_genes.csv  varGene_1500.csv
TrajAtlas/datasets/pseduoPred/: lightGBM_pred.pkl
TrajAtlas/logging/: __init__.py  _logging.py
TrajAtlas/model/: .project.py.swp  __init__.py  emb.py  project copy.py  project.py  project_test_18.py
TrajAtlas/settings/: __init__.py  _settings.py
TrajAtlas/trajMap/: LICENSE  pyproject.toml
TrajAtlas/trajMap/src/trajMap/: __init__.py
TrajAtlas/trajMap/src/trajMap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TrajAtlas/trajMap/src/trajMap/.ipynb_checkpoints/: main-checkpoint.py
TrajAtlas/trajMap/src/trajMap/datasets/: trajMap_reference_1.h5ad
TrajAtlas/trajMap/src/trajMap/trajMap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
TrajAtlas/utils/: GEP.py  __init__.py  _docs.py  _env.py  attr_util.py  utils.py  utils_spatial_1.py  utils_test_12.py
docs/: requirements.txt  requirements.txt_bk
docs/source/: 1_OPCST_projecting.md  TrajDiff.md  conf.py  contributing.rst  index.rst  installation.rst  references.bib  references.rst  release_notes.rst  test2.srt
docs/source/about/: cite.rst  index.rst  team.rst
docs/source/api/: TRAVMap.rst  index.rst  model.rst  trajdiff.rst  utils.rst
docs/source/api/_autosummary/TRAVMap/: TrajAtlas.TRAVMap.find_gene_module.rst  (+2 more)
docs/source/introduction/: Differentiation_Atlas.md  Introduction_to_TrajAtlas.md  OPCST_model.md  TRAVMap.md  TrajDiff.md  index.rst
docs/source/release/: notes-0.1.0.rst  notes-0.2.0.rst  notes-1.0.0.rst
docs/source/tutorial/: 1_OPCST_projecting.md  4.15_GEP.md  Step2_differential_abundance.md  gssaxis.md  index.rst  pseudotemporal_gene_module.md  spaital_omic.md  step3_DE.md
(+9 files in other folders)
