[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TrajAtlas"
version = "0.1.3"
authors = [
  { name="Gilbert Han", email="gilberthan1011@gmail.com" },
]
description = "TrajAtlas, a trajectory-centric framework reveals differentiation heterogenity among cells, genes, and gene modules"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
	"anndata>=0.8.0",
	"numpy>=1.23.5",
	"scipy>=1.10.1",
	"joblib>=1.2.0",
	"pandas==2.0.0",
	"scvi>=0.6.8",
	"scarches>=0.5.6",
	"tensorflow>=2.13.0",
	"scanpy>=1.9.1",
	"mudata>=0.2.3",
	"tqdm>=4.65.0",
	"statsmodels>=0.14.0",
	"PyComplexHeatmap>=1.6.4",
	"lightgbm",
	"scikit-learn",
	"rpy2",
	"optax==0.1.5"
]

[project.urls]
"Homepage" = "https://github.com/GilbertHan1011/TrajAtlas"
"Bug Tracker" = "https://github.com/GilbertHan1011/TrajAtlas/issues"



[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
#namespaces = true
#where = ["src"]

[tool.coverage.run]
source_pkgs = ["TrajAtlas"]

[tool.setuptools.package-data]
"TrajAtlas.datasets" = ["*.h5ad","*.csv"]
"TrajAtlas.datasets.scanvi_model" = ["*.pt"]
"TrajAtlas.datasets.pseduoPred" = ["*.pkl"]

